# website-admin

./: .gitignore  README.md  pyproject.toml  requirements.frozen
templates/bgc/: ads.html.j2  calendar.html.j2  contact.html.j2  download.html.j2  future.html.j2  history.html.j2  html.j2  index.html.j2  past.html.j2  style.css.j2
templates/schilduil/: html.j2  print.css  screen.css
templates/two_columns/: index.html  index.html.j2
websiteadmin/: __main__.py  commands.py  configuration.py
wsa/: __main__.py  commands.py  configuration.py
wsa/lib/: filesystem.py  jinja2_helpers.py
wsa/lib/directadmin/: __init__.py  client.py  endpoints.py
